# Math

./: .gitignore  CMakeLists.txt
inc/linear_algebra/: matrix_basic_op.h  matrix_constructor.h  matrix_def.h  matrix_defines.h  matrix_pointers.h
inc/tests/: matrix_eq.h
scripts/: count_strings.py  install.sh
tests/: CMakeLists.txt
tests/unit/: basic_init_matrix_test.cpp  basic_op_matrix_test.cpp  constructor_matrix_test.cpp  ptr_value_matrix_test.cpp  test.cpp
